# cataloger-python-engine

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  pytest.xml
.run/: All Tests.run.xml  Lazy Mongoose Backend Core.run.xml  Lazy Mongoose.run.xml
cataloger_python_engine/lazy_coders/: lazy_coders.py  lazy_mongoose.py  lazy_mongoose__.py
cataloger_python_engine/utils/: file_formats.py
templates/backend-project/: cookiecutter.json
templates/backend-project/{{cookiecutter.project_kebab}}/: app.ts  package.json  tsconfig.json
templates/backend-project/{{cookiecutter.project_kebab}}/connections/: {{cookiecutter.project_kebab}}.conn.ts
