[tool.poetry]
name = "cataloger-python-engine"
version = "0.1.0"
description = ""
authors = ["Borja Refoyo Ruiz <squallium3@gmail.com>"]
readme = "README.md"
packages = [{ include = "cataloger_python_engine" }]


[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
